SOLR-13659: Refactor Cache config to lazily load the the class (#813)